--- a/_layouts/songs.html
+++ b/_layouts/songs.html
@@ -112,10 +112,10 @@
               每一首歌曲每天可投一票表達支持。
             </p>
             <p>
-              一天時間以 00:00 ~ 23:59 為基準。
+              投票截止後，7/7 00:30 將公開前二十名歌曲
             </p>
             <p>
-              投票截止後，7/7 00:30 將公開前二十名歌曲
+              7/9評審決選，將邀請全民投票前三名於公館THE WALL現場表演。
             </p>
           </div>
         </div>
