--- a/_layouts/songs.html
+++ b/_layouts/songs.html
@@ -106,16 +106,13 @@
               參賽作品一覽
             </h1>
             <p>
-              投票時間 7/2 10:00 ～ 7/6 23:59，<br class="mobile-wrap">使用 FB 帳號進行登入投票。
+              投票時間7/2 10:00～7/6 23:59<br class="mobile-wrap">使用 FB 帳號進行登入投票
             </p>
             <p>
-              每一首歌曲每天可投一票表達支持。
+              每一首歌曲每天可投一票表達支持，<br class="mobile-wrap">投票截止後7/7 00:30將公開前二十名歌曲
             </p>
             <p>
-              投票截止後，7/7 00:30 將公開前二十名歌曲
-            </p>
-            <p>
-              7/9評審決選，將邀請全民投票前三名於公館THE WALL現場表演。
+              7/9評審決選，將邀請全民投票前三名<br class="mobile-wrap">於公館THE WALL現場表演
             </p>
           </div>
         </div>
