--- a/_layouts/song.html
+++ b/_layouts/song.html
@@ -4,7 +4,7 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <link href="/stylesheets/all.css?20150702" media="screen" rel="stylesheet" type="text/css" /><script src="/vender/modernizr.custom.76886.js" type="text/javascript"></script><!--[if IE]><link href="/stylesheets/ie.css" media="screen" rel="stylesheet" type="text/css" /><![endif]--><!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
+    <link href="/stylesheets/all.css" media="screen" rel="stylesheet" type="text/css" /><script src="/vender/modernizr.custom.76886.js" type="text/javascript"></script><!--[if IE]><link href="/stylesheets/ie.css" media="screen" rel="stylesheet" type="text/css" /><![endif]--><!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
     <title>{{ page.title }} - {{ site.title }} - {{ site.slogan }}</title>
     <meta   name="keywords"           content="{{ site.keywords }}">
     <meta   name="description"        content="{{ site.discription }}">
@@ -37,6 +37,9 @@
        }(document, 'script', 'facebook-jssdk'));
     </script>
     <div id="fb-root"></div>
+    <div class="too-many-people-is-here">
+      <p>目前網站太多人瀏覽，處理仍進行中，敬請的耐心等候，謝謝</p>
+    </div>
     <div class="popup-container">
       <div class="popup-dialog">
         <div class="popup-dialog-inner"></div>
@@ -221,12 +224,10 @@
     </div><script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
     <script src="http://connect.soundcloud.com/sdk.js" type="text/javascript"></script>
     <script src="/vender/slick.min.js" type="text/javascript"></script>
-    <script src="/javascripts/global.js?20150702" type="text/javascript"></script>
+    <script src="/javascripts/global.js" type="text/javascript"></script>
     <script src="/javascripts/animate.js" type="text/javascript"></script>
     <script src="/javascripts/waveform.js" type="text/javascript"></script>
-    <script src="/javascripts/soundcloud.js?20150702" type="text/javascript"></script>
-    <script src="/javascripts/song.js?20150702" type="text/javascript"></script>
-    <script src="/javascripts/all.js" type="text/javascript"></script><script>
+    <script src="/javascripts/soundcloud.js" type="text/javascript"></script><script src="/javascripts/song.js" type="text/javascript"></script><script src="/javascripts/all.js" type="text/javascript"></script><script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
