--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <link href="/stylesheets/all.css?201507020230" media="screen" rel="stylesheet" type="text/css" /><script src="/vender/modernizr.custom.76886.js" type="text/javascript"></script><!--[if IE]><link href="/stylesheets/ie.css" media="screen" rel="stylesheet" type="text/css" /><![endif]--><!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
+    <link href="/stylesheets/all.css" media="screen" rel="stylesheet" type="text/css" /><script src="/vender/modernizr.custom.76886.js" type="text/javascript"></script><!--[if IE]><link href="/stylesheets/ie.css" media="screen" rel="stylesheet" type="text/css" /><![endif]--><!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
     <title>
       台灣美樂地 - 2016蔡英文競選歌曲徵件
     </title>
@@ -219,7 +219,7 @@
                       翁嘉銘
                     </h4>
                     <p>
-                      資深樂評人&amp;球評<br>現職：專欄作家，世新中文系新聞寫作課 / 歌詞課老師
+                      資深樂評人&amp球評<br>現職：專欄作家，世新中文系新聞寫作課 / 歌詞課老師
                     </p>
                   </li>
                   <li>
