--- a/_layouts/finalround.html
+++ b/_layouts/finalround.html
@@ -5,17 +5,18 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
     <link href="/stylesheets/all.css" media="screen" rel="stylesheet" type="text/css" /><script src="/vender/modernizr.custom.76886.js" type="text/javascript"></script><!--[if IE]><link href="/stylesheets/ie.css" media="screen" rel="stylesheet" type="text/css" /><![endif]--><!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
-    <title>{{ page.title }} - {{ site.title }} - {{ site.slogan }}</title>
-    <meta   name="keywords"           content="{{ site.keywords }}">
-    <meta   name="description"        content="{{ site.discription }}">
-    <meta   property="og:title"       content="{{ page.title }} by {{ page.artist }} — {{ site.title }} — {{ site.slogan }}">
-    <meta   property="og:site_name"   content="{{ site.title }}">
-    <meta   property="og:url"         content="http://melody.iing.tw{{ page.permalink }}">
-    <meta   property="og:image"       content="http://melody.iing.tw/images/fb.png">
-    <meta   property="og:description" content="{{ site.discription }}">
-    <meta   property="og:type"        content="music.song">
-    <meta   property="fb:admins"      content="612130717">
-    <meta   property="fb:admins"      content="100002269303618">
+    <title>
+      台灣美樂地 - 2016蔡英文競選歌曲徵件
+    </title>
+    <meta content="蔡英文,美樂地,melody,競選,競選專輯,競選歌曲,總統" name="keywords">
+    <meta content="為這片土地，寫一首歌！2016蔡英文競選專輯《台灣美樂地》預計九月發行。廣邀所有對台灣有牽掛、對音樂有熱誠的創作者，為這片土地譜出我們交織的記憶，唱出屬於台灣的melody。" name="description"><meta content="台灣美樂地 - 2016蔡英文競選歌曲徵件" property="og:title">
+    <meta content="台灣美樂地" property="og:site_name">
+    <meta content="http://melody.iing.tw" property="og:url">
+    <meta content="http://melody.iing.tw/images/fb.png" property="og:image">
+    <meta content="為這片土地，寫一首歌！2016蔡英文競選專輯《台灣美樂地》預計九月發行。廣邀所有對台灣有牽掛、對音樂有熱誠的創作者，為這片土地譜出我們交織的記憶，唱出屬於台灣的melody。" property="og:description">
+    <meta content="website" property="og:type">
+    <meta content="612130717" property="fb:admins">
+    <meta content="100002269303618" property="fb:admins">
   </head>
   <body>
     <script>
@@ -69,7 +70,7 @@
         </div>
       </div>
     </div>
-    <div class="page">
+    <div class="page list">
       <div class="page-inner">
         <div class="header">
           <div class="header-inner">
@@ -80,42 +81,27 @@
             <ul class="header-nav off">
               <li><a href="/#event-detail">徵選辦法</a></li>
               <li><a href="/songs/">參賽作品</a></li>
-              <li class="after-interval"><a href="/finalround">決選作品</a></li>
+              <li class="active"><a href="/finalround">決選作品</a></li>
             </ul>
           </div>
         </div>
-        <div class="page-title song">
+        <div class="page-title list">
           <div class="page-title-inner">
-            <div class="page-title-song-content">
-              <div class="song-number"></div>
-              <div class="song-title-container">
-                <div class="song-title"></div>
-                <div class="song-artist"></div>
-                <!-- <div class="play-times-container">
-                  播放次數：<span class="play-times"></span>
-                </div> -->
-              </div>
-            </div>
-            <div class="song-tool-buttons">
-              <button class="fb-share" type="button" data-href="">分享</button>
-              <div class="vote-button-container">
-                <button class="vote-button" type="button" data-id="">投他一票</button>
-                <div class="vote-count"></div>
-              </div>
-            </div>
+            <h1>
+              決選作品一覽
+            </h1>
+            <p>
+              此分頁為全民投票之二十首入圍作品，
+            </p>
+            <p>
+              7/9 15:00將網路直播，
+            </p>
+            <p>
+              由評審遴選收錄於《台灣美樂地》專輯之十首歌曲。
+            </p>
           </div>
         </div>
-        <div class="song-player-container off">
-          <div class="song-player">
-            <button class="play-button" data-id="" data-sid="" data-trackid=""></button>
-            <div class="song-wave">
-              <div class="waveform-preview"></div>
-              <div class="waveform"></div>
-              <input class="song-waveform-value" type="hidden">
-            </div>
-          </div>
-        </div>
-        <div class="content song-detail off">
+        <div class="content list">
           <div class="spinner">
             <div class="spinner-container container1">
               <div class="circle1"></div>
@@ -136,44 +122,12 @@
               <div class="circle4"></div>
             </div>
           </div>
-          <div class="container">
-            <div class="gray-container">
-              <div class="song-intro">
-                <div class="side-title">
-                  <div class="color-ring">
-                    <div class="ring-balls"></div>
-                  </div>
-                  <div class="color-bars"></div>
-                  <div class="color-dot"></div>
-                  創作理念
-                </div>
-                <div class="song-title"></div>
-                <div class="song-artist"></div>
-                <p>
-                  &nbsp;
-                </p>
-              </div>
-              <div class="song-lyric">
-                <div class="side-title">
-                  <div class="color-ring">
-                    <div class="ring-balls"></div>
-                  </div>
-                  <div class="color-bars"></div>
-                  <div class="color-dot"></div>
-                  歌詞
-                </div>
-                <p>
-                  &nbsp;
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="next-song">
-            <a class="btn btn_primary" href="/songs">全部歌曲</a>
-            <a id="nextSong" class="btn btn_primary" href="">隨機播放另一首</a>
+          <div class="container" id="song-list">
+            <div class="search-bar off"></div>
+            <ul class="song-list"></ul>
           </div>
         </div>
-        <div class="page-bottom-illustrator off"></div>
+        <div class="page-bottom-illustrator"></div>
       </div>
       <div class="site-info">
         <div class="container">
@@ -228,8 +182,10 @@
     <script src="/vender/slick.min.js" type="text/javascript"></script>
     <script src="/javascripts/global.js" type="text/javascript"></script>
     <script src="/javascripts/animate.js" type="text/javascript"></script>
+    <script src="/javascripts/soundcloud.js" type="text/javascript"></script>
     <script src="/javascripts/waveform.js" type="text/javascript"></script>
-    <script src="/javascripts/soundcloud.js" type="text/javascript"></script><script src="/javascripts/song.js" type="text/javascript"></script><script src="/javascripts/all.js" type="text/javascript"></script><script>
+    <script src="/javascripts/finalround.js" type="text/javascript"></script>
+    <script src="/javascripts/all.js" type="text/javascript"></script><script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
