--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -77,7 +77,9 @@
           </div>
         </div><div class="intro">
           <div class="go-to-list">
-            <a class="btn btn_primary" href="/songs/">前往投票</a>
+            <a class="btn btn_primary in-interval" href="/songs/">前往投票</a>
+            <a class="btn btn_primary after-interval" href="/songs/">歌曲試聽</a>
+            <a class="btn btn_primary after-interval" href="/finalround/">決選作品</a>
           </div>
           <div class="intro-content">
             <p>
