--- a/_layouts/song.html
+++ b/_layouts/song.html
@@ -226,10 +226,12 @@
     </div><script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
     <script src="http://connect.soundcloud.com/sdk.js" type="text/javascript"></script>
     <script src="/vender/slick.min.js" type="text/javascript"></script>
-    <script src="/javascripts/global.js" type="text/javascript"></script>
+    <script src="/javascripts/global.js?2015060721" type="text/javascript"></script>
     <script src="/javascripts/animate.js" type="text/javascript"></script>
-    <script src="/javascripts/waveform.js" type="text/javascript"></script>
-    <script src="/javascripts/soundcloud.js" type="text/javascript"></script><script src="/javascripts/song.js" type="text/javascript"></script><script src="/javascripts/all.js" type="text/javascript"></script><script>
+    <script src="/javascripts/waveform.js?2015060721" type="text/javascript"></script>
+    <script src="/javascripts/soundcloud.js?2015060721" type="text/javascript"></script>
+    <script src="/javascripts/song.js?2015060721" type="text/javascript"></script>
+    <script src="/javascripts/all.js?2015060721" type="text/javascript"></script><script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
