--- a/_layouts/song.html
+++ b/_layouts/song.html
@@ -80,7 +80,7 @@
             <ul class="header-nav off">
               <li><a href="/#event-detail">徵選辦法</a></li>
               <li><a href="/songs/">參賽作品</a></li>
-              <li class="after-interval"><a href="/finalround">決選作品</a></li>
+              <!-- <li class="after-interval"><a href="/finalround">決選作品</a></li> -->
             </ul>
           </div>
         </div>
