--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@
     <meta content="612130717" property="fb:admins">
     <meta content="100002269303618" property="fb:admins">
   </head>
-  <body>
+  <body class="event-close">
     <div class="page">
       <div class="page-inner">
         <div class="gray-balls">
