--- a/_layouts/song.html
+++ b/_layouts/song.html
@@ -17,7 +17,7 @@
     <meta   property="fb:admins"      content="612130717">
     <meta   property="fb:admins"      content="100002269303618">
   </head>
-  <body>
+  <body class="event-close">
     <script>
       window.fbAsyncInit = function() {
         FB.init({
