add winners song list

--- a/_layouts/finalround.html
+++ b/_layouts/finalround.html
@@ -72,13 +72,19 @@
               決選作品一覽
             </h1>
             <p>
-              此分頁為全民投票之二十首入圍作品，
+              7/9 的評審決選，經過熱烈討論後，
             </p>
             <p>
-              7/9 15:00將網路直播，
+              在全民投票前 20 強歌曲中選出十首作品。
             </p>
             <p>
-              由評審遴選收錄於《台灣美樂地》專輯之十首歌曲。
+              此外，評審團經過討論決議，另外由評審推薦投票，
+            </p>
+            <p>
+              收錄未進入前 20 強的三首遺珠作品，
+            </p>
+            <p>
+              希望這 10 加 3 的徵件作品能夠傳達美樂地專輯在地故事、多元價值的核心理念。
             </p>
           </div>
         </div>
@@ -104,7 +110,47 @@
             </div>
           </div>
           <div class="container" id="song-list">
-            <div class="search-bar off"></div>
+            <div class="winners">
+              <p>《台灣美樂地》專輯將收錄十首由評審最終決選的歌曲</p>
+              <ul>
+                <li><a href="http://melody.iing.tw/song/15">轉來key</a></li>
+                <li><a href="http://melody.iing.tw/song/3">Round and Round</a></li>
+                <li><a href="http://melody.iing.tw/song/127">台灣花</a></li>
+                <li><a href="http://melody.iing.tw/song/87">嶼民</a></li>
+                <li><a href="http://melody.iing.tw/song/99">四合院</a></li>
+                <li><a href="http://melody.iing.tw/song/176">為你微笑</a></li>
+                <li><a href="http://melody.iing.tw/song/130">山RGAX</a></li>
+                <li><a href="http://melody.iing.tw/song/148">天公伯</a></li>
+                <li><a href="http://melody.iing.tw/song/85">草地踏實</a></li>
+                <li><a href="http://melody.iing.tw/song/164">頌台灣</a></li>
+              </ul>
+              <p>以及三首由評審推薦入選的歌曲</p>
+              <ul>
+                <li><a href="http://melody.iing.tw/song/170">呷飽未</a></li>
+                <li><a href="http://melody.iing.tw/song/55">南邊的風</a></li>
+                <li><a href="http://melody.iing.tw/song/109">我願是你的風景</a></li>
+              </ul>
+              <!-- <p>《台灣美樂地》專輯收錄歌曲包括</p>
+              <ul>
+                <li>轉來key</li>
+                <li>Round and Round</li>
+                <li>台灣花</li>
+                <li>嶼民</li>
+                <li>四合院</li>
+                <li>為你微笑</li>
+                <li>山RGAX</li>
+                <li>天公伯</li>
+                <li>草地踏實</li>
+                <li>頌台灣</li>
+              </ul>
+              <p>等十首今天由評審最終決選的歌曲，以及</p>
+              <ul>
+                <li>呷飽未</li>
+                <li>南邊的風</li>
+                <li>我願是你的風景</li>
+              </ul>
+              <p>等三首由評審推薦入選的歌曲。</p> -->
+            </div>
             <ul class="song-list"></ul>
           </div>
         </div>
