--- a/_layouts/song.html
+++ b/_layouts/song.html
@@ -62,6 +62,7 @@
               <li><a href="/#event-detail">徵選辦法</a></li>
               <li><a href="/songs/">參賽作品</a></li>
               <li class="after-interval"><a href="/finalround">決選作品</a></li>
+              <li class="pre-order"><a href="http://iing.tw/posts/59" target="_blank">專輯預購中</a></li>
             </ul>
           </div>
         </div>
